--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "if-env": "^1.0.4"
+    "bootstrap": "^4.5.3",
+    "if-env": "^1.0.4",
+    "react-bootstrap": "^1.4.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0"
